added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,25 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Can you tell the difference between a human-generated and an computer-generated image?"/>
+
+    <!-- Primary Meta Tags -->
     <title>This Image Does Not Exist</title>
+    <meta name="title" content="This Image Does Not Exist">
+    <meta name="description" content="Test your ability to tell if an image is human or computer generated.">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://thisimagedoesnotexist.com/">
     <meta property="og:title" content="This Image Does Not Exist">
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Test your ability to tell if an image is human or computer generated">
+    <meta property="og:description" content="Test your ability to tell if an image is human or computer generated.">
     <meta property="og:image" content="https://raw.githubusercontent.com/saharmor/tide/main/public/meta_thumbnail.jpeg">
-    <meta property="og:url" content="https://thisimagedoesnotexist.com/">>
 
-    <meta name="twitter:title" content="This Image Does Not Exist">
-    <meta name="twitter:description" content=" Test your ability to tell if an image is human or computer generated">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/saharmor/tide/main/public/meta_thumbnail.jpeg">
-    <meta name="twitter:card" content="summary_large_image">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://thisimagedoesnotexist.com/">
+    <meta property="twitter:title" content="This Image Does Not Exist">
+    <meta property="twitter:description" content="Test your ability to tell if an image is human or computer generated.">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/saharmor/tide/main/public/meta_thumbnail.jpeg">
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
