--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     <meta property="twitter:image" content="https://raw.githubusercontent.com/saharmor/tide/main/public/meta_thumbnail.jpeg">
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="assets/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   </head>
   <body>
