images batch gameplay

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://thisimagedoesnotexist.com/">
     <meta property="og:title" content="This Image Does Not Exist">
     <meta property="og:description" content="Test your ability to tell if an image is human or computer generated.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/saharmor/tide/main/public/meta_thumbnail.jpeg">
+    <meta property="og:image" content="https://github.com/saharmor/tide/blob/main/public/meta_thumbnail.jpeg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://thisimagedoesnotexist.com/">
     <meta property="twitter:title" content="This Image Does Not Exist">
     <meta property="twitter:description" content="Test your ability to tell if an image is human or computer generated.">
-    <meta property="twitter:image" content="https://raw.githubusercontent.com/saharmor/tide/main/public/meta_thumbnail.jpeg">
+    <meta property="twitter:image" content="https://github.com/saharmor/tide/blob/main/public/meta_thumbnail.jpeg">
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="assets/favicon/favicon.ico">
